1.66
-----------------
Set 0 retries on findChunks.
Alarms for FastMon errors, acdPeds, calGains, calPeds.
Remove some cruft.
-------------------------------------------


1.65
-----------------
Use autoRetryMaxAttempts="1" for all processes.
Don't merge recon for InProgress runs [LONE-109].
Fix time order check for <1s chunks.
-------------------------------------------


1.64
-----------------
GR v15r40 (containing SC alignment, among others).
Tkr alignment and SC aligment are back in recon JO.
Move svacTuple to chunk level. [LONE-110@JIRA]
Alarms on FastMon errors (not in main task yet). [LONE-111@JIRA]
Start work on not merging recon on InProgress runs (not in main task yet). [LONE-109@JIRA]
-------------------------------------------


1.63
-----------------
Add alarms on calHist. [LONE-107@JIRA]
In test mode only, acqQuery.runTimes returns values supplied by halfpipe if
run is not in ACQSUMMARY.
Always use prod L0 archive to make magic7.
Automatically determine host groups attached to glastdataq when making 
host lists.
Premake run, chunk and crumb directories on buffers to reduce concurrent
writes.
Fix chunk overlap testing, add more tests. [LONE-92@JIRA]
Put CMTPATH in environment for all jobs.  Might help with broken headers when 
merging.
-------------------------------------------


1.62
-----------------
Fixed the dependencies for copyM7Hp and registerM7Hp and copyM7Lci.
Don't use symlinks to buffers. [LONE-100@JIRA]
Use a constant bigger number of smaller crumbs/chunk. [LONE-100@JIRA]
Assign hosts to chunks in random order. [LONE-100@JIRA]
Make chunkLists human-editable. [LONE-93@JIRA]
Test for pathological chunks. [LONE-92@JIRA]
Avoid core files in log directory from ingest jobs.
Don't fail kludgeAsp if the stream has already been launched. [ASP-26@JIRA]
Put runId[.chunkId] in target when logging missing files on
merge. [LONE-94@JIRA]
Trim a couple of static values from registerPrep/registerStuff interface, put
them in the XML.